  running glibc 2.34 or newer.

o Improvements to building and installer code signing on macOS.

o Fixes to better support building with future versions of GNU make.

o Use updated FFI API in Java module, to better support recent libffi.

o Fix testsuite generation for BSD m4 users; POSIX systems must continue
  to use GNU m4 (gm4).

Changes since Pike 8.0.702 (release 13)
----------------------------------------------------------------------

New Features
------------

o Core

  - Added "->?" as the safe indexing variant of "->".

  - Added int(7,8,16bit).

o ADT.History

  Support encode/decode_value().

o Pike.FakeObject

  This is used as a placeholder used in place of other objects in backtraces.

o Pike.DestructImmediate

  An empty class that can be inherited to get the PROGRAM_DESTRUCT_IMMEDIATE 
  flag set.

o Image.Dims.exif_get and Image.exif_decode

  New convenience functions to get the functionality of
  Image.Dims.exif_get_JPEG and Image.JPEG._decode (rotation of the image
  according to the EXIF orientation information) without needing to check
  if the image is JPEG first.

o Concurrent

  - Add delay() to postpone a future.

  - Rewrite timeout() to reduce the memory footprint of a future in the
    common case.

  - Added query_{success,failure}_callbacks() and  try_get() to 
    Concurrent.Future.

o Process.Process

  - On NT it is now possible to specify the preferred console handler
    via the "conpty" option. The default is to take it from the first
    pty of "stdin", "stdout", and "stderr". If none of them is a pty
    the console handler is inherited from the current process.

o SSL

  The SSL module now supports session ticket both client and server side.
  This functionality has been backported from 8.1/master.

o Standards.X509

  Standards.X509 now allows the user to select acceptable signature
  algorithms to be used in the verification of certificates.

o Stdio.Buffer

  Added truncate() and the ability to search for substrings.
